--- a/styles/main.css
+++ b/styles/main.css
@@ -10,10 +10,27 @@
     src: url("../fonts/franklin-normal-300.ttf") format("truetype");
 }
 
+@font-face {
+    font-family: "NYTKarnakCondensed";
+    src: url("../fonts/NYTKarnakCondensed.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "nyt-cheltenham";
+    src: url("../fonts/cheltenham-normal-400.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "nyt-franklin-600";
+    src: url("../fonts/franklin-normal-600.ttf") format("truetype");
+}
+
 :root {
     --nyt-KarnakCondensed: "NYTKarnakCondensed", sans-serif;
     --nyt-karnak: "nyt-karnak", sans-serif;
     --nyt-franklin: "nyt-franklin", sans-serif;
+    --nyt-cheltenham: "nyt-cheltenham", sans-serif;
+    --nyt-franklin-600: "nyt-franklin-600", sans-serif;
     --color-bg: #e3e3e1;
     --button-bg: #000;
 }
@@ -96,6 +113,120 @@ body {
     margin-top: 0;
 }
 
+
+/* Styles for auth.html*/
+.heading-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
+    padding: 1rem 0 1rem 0;
+    margin-bottom: 4rem;
+}
+
+.title-heading {
+    font-family: var(--nyt-KarnakCondensed);
+    font-size: clamp(2rem, 5vw, 2.65rem);
+    text-align: center;
+    /*font-size: 2.25rem;*/
+    font-weight: 500; 
+    margin:0;
+}
+
+.title-logo {
+    height: 2.3rem;
+    text-align: center;
+}
+
+.auth-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 500px;
+    margin: 0 auto;
+    /*border: 1px solid #000;*/
+}
+
+.auth-title {
+    color: rgb(0, 0, 0);
+    font-family: var(--nyt-cheltenham), georgia, "times new roman", times, serif;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 1.3;
+    text-align: center;
+    margin: 0 0 2rem 0;
+}   
+
+.auth-form-container {
+    padding:0;
+    margin:0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /*border: 1px solid red;*/
+    margin-bottom: 2rem;
+    width: 370px;
+}
+
+.auth-label {
+    color: rgb(0, 0, 0);
+    font-family: var(--nyt-franklin-600);
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 21px;
+    margin-bottom: 0.3rem;
+}
+
+.input-container {
+    width: 100%;
+    /*border: 1px solid green;*/
+    height: 100%;
+}
+
+.auth-input {
+    width: 100%;
+    height: 2.75rem;
+    padding: 0px 0.75rem;
+    border-style: solid;
+    border-color: #000;
+    border-radius: 3px;
+    outline: none;
+    font-family: var(--nyt-franklin-600);
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: normal;
+    color: rgb(0, 0, 0);    
+    background-color: rgb(255, 255, 255);
+    box-sizing: border-box;
+    opacity: 1;
+    box-shadow: none;
+    transition: box-shadow 200ms linear;
+    margin-bottom: 1rem;
+}
+
+.continue-button {
+    width: 100%;
+    height: 2.75rem;
+    line-height: 2.375em;
+    font-family: var(--nyt-franklin-600), helvetica, arial, sans-serif;
+    font-size: 1em;
+    font-weight: 700;
+    cursor: pointer;
+    border: 0.0625em solid rgb(18, 18, 18);
+    border-radius: 3px;
+    box-sizing: border-box;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background-image: none;
+    color: rgb(255, 255, 255);
+    background-color: rgb(18, 18, 18);
+    transition: 0.15s ease-in;
+}
+
+
 @media (min-width: 760px) {
     .title {
         font-size: 2.75rem; /* 44px */
@@ -136,5 +267,41 @@ body {
         font-size: 2.15rem; /* 38px */
         line-height: 2.2rem; /* 44px */
         margin-bottom: 2.25rem; /* 36px */
+    }
+}
+
+@media (max-width: 380px) {
+    .auth-title {
+        max-width: 320px;
+    }
+
+    .auth-form-container {
+        width: 310px;
+    }
+}
+
+@media(min-width: 768px) {
+    .auth-title {
+        max-width: 350px;
+        font-size: 2.02rem;
+    }
+    .auth-form-container {
+        width: 400px;
+    }
+    .auth-label {
+        font-size: 18px;
+    }
+}
+
+@media(min-width: 992px) {
+    .auth-title {
+        max-width: 350px;
+        font-size: 2.05rem;
+    }
+    .auth-form-container {
+        width: 420px;
+    }
+    .auth-label {
+        font-size: 19px;
     }
 }
