--- a/styles/game.css
+++ b/styles/game.css
@@ -1,4 +1,128 @@
-body {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: black;
+    overflow-x: hidden;
+}
+
+@font-face {
+    font-family: "nyt-franklin-600";
+    src: url("../fonts/franklin-normal-600.ttf") format("truetype");
+}
+
+.top-header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 3rem;
+    padding: 0 1rem 0 0;
+    border-bottom: 1px solid #424242;
+}
+
+.button-set {     
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    height: 100%;
+}
+
+.hint-button, .stats-button, .leader-board-button, .help-button, .settings-button {
+    background-color: black;
+    border:none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logout-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font: 14px / 18px "nyt-franklin-600";   
+    color: white;
+    border: solid 1px white;
+    border-radius: 9999px;
+    width: 85px;
+    height: 32px;
+    padding: 0 12px;
+    background-color: black;
+}
+
+@media (min-width: 1024px) {
+    .top-header {
+        padding: 0px 1.5rem;
+        height: 3.5rem;
+        justify-content: flex-end;
+    }
+
+    
+    .logout-button {
+        font: 16px / 21px "nyt-franklin-600";
+        height: 44px;
+        width: 172px;
+        margin-left: 12px;
+        padding: 0 16px;
+        min-height: 35px;
+    }
+    
+}
+
+.board-column {
+    width: 300px;
+    height: 360px;
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.tile {
+    font-family: "nyt-franklin-600";
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    line-height: 1;
+    font-weight: bold;
+    vertical-align: middle;
+    box-sizing: border-box;
+    color: #f8f8f8;
+    text-transform: uppercase;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: 2px solid #3a3a3c;  
+}
+
+.Row-tile {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 5px;
+}
+
+@media (min-width: 768px) {
+    .top-header {
+        padding: 0px 1rem;
+        justify-content: flex-end;
+    }
+}
+
+@media (min-width: 400px) {
+    .logout-button {
+        margin-left: 10px;
+    }
+}
+
+@media (min-width: 375px) {
+    .logout-button {
+        width: 147px;
+    }
 }
