--- a/styles/game.css
+++ b/styles/game.css
@@ -14,6 +14,11 @@ body {
     src: url("../fonts/franklin-normal-600.ttf") format("truetype");
 }
 
+@font-face {
+    font-family: "nyt-franklin-800";
+    src: url("../fonts/franklin-normal-800.ttf") format("truetype");
+}
+
 .top-header {
     width: 100%;
     display: flex;
@@ -44,18 +49,17 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font: 14px / 18px "nyt-franklin-600";   
+    font: 0.875rem / 1.125rem "nyt-franklin-600";
     color: white;
-    border: solid 1px white;
+    border: solid 0.0625rem white;
     border-radius: 9999px;
-    width: 85px;
-    height: 32px;
-    padding: 0 12px;
+    width: 5.3125rem;
+    height: 2rem;
+    padding: 0 0.75rem;
     background-color: black;
 }
 
 .board-container {
-    border: 1px solid balck;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -97,8 +101,8 @@ body {
 }
 
 .keyboard-container {
-    height: 200px;
-    margin: 0 8px;
+    height: 12.5rem;
+    margin: 0 0.5rem;
     border: 1px solid red;
     display: flex;
     justify-content: center;
@@ -106,30 +110,31 @@ body {
 }
 
 .keyboard {
-    height: 198px;
-    width: 484px;
+    height: 12.375rem;
+    width: 30.25rem;
     border: 1px solid blue;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding-left: 0.375rem;
 }
 
 .keyboard-row {
     display: flex;
     width: 100%;
-    margin: 0 auto 8px;
+    margin: 0 auto 0.5rem;
     touch-action: manipulation;
 }
 
 .button-keys {
-    font-family: "nyt-franklin-600";
+    font-family: "nyt-franklin-800";
     font-size: 1.25em;
     font-weight: bold;
     border: 0;
     padding: 0;
-    margin: 0 6px 0 0;
-    height: 58px;
-    border-radius: 4px;
+    margin: 0 0.375rem 0 0;
+    height: 3.625rem;
+    border-radius: 0.25rem;
     cursor: pointer;
     user-select: none;
     background-color: #818384;
@@ -146,6 +151,11 @@ body {
     flex: 0.5;
 }
 
+.enter-clear {
+    flex: 1.5;
+    font-size: 0.75rem;
+}
+
 @media (min-width: 768px) {
     .top-header {
         padding: 0px 1rem;
@@ -155,13 +165,13 @@ body {
 
 @media (min-width: 400px) {
     .logout-button {
-        margin-left: 10px;
+        margin-left: 0.625rem;
     }
 }
 
 @media (min-width: 375px) {
     .logout-button {
-        width: 147px;
+        width: 9.1875rem;
     }
 }
 
@@ -174,12 +184,12 @@ body {
 
     
     .logout-button {
-        font: 16px / 21px "nyt-franklin-600";
-        height: 44px;
-        width: 172px;
-        margin-left: 12px;
-        padding: 0 16px;
-        min-height: 35px;
+        font: 1rem / 1.3125rem "nyt-franklin-600";
+        height: 2.75rem;
+        width: 10.75rem;
+        margin-left: 0.75rem;
+        padding: 0 1rem;
+        min-height: 2.1875rem;
     }
     
 }
