--- a/styles/game.css
+++ b/styles/game.css
@@ -118,7 +118,7 @@ body {
 
 .flip-animation {
     animation-name: flip;
-    animation-duration: 250ms;
+    animation-duration: 500ms;
     animation-timing-function: ease-in;
 }
 
@@ -252,9 +252,12 @@ body {
 
 @keyframes flip {
     0% {
-      transform: rotateX(-90deg);
+        transform: rotateX(0);
+    }
+    50% {
+        transform: rotateX(-90deg); /* Midway flip (hide content) */
     }
     100% {
-      transform: rotateX(0);
+        transform: rotateX(0); /* Fully revealed */
     }
-  }
+}
