--- a/styles/game.css
+++ b/styles/game.css
@@ -9,6 +9,12 @@ body {
     overflow-x: hidden;
 }
 
+.game-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
 @font-face {
     font-family: "nyt-franklin-600";
     src: url("../fonts/franklin-normal-600.ttf") format("truetype");
@@ -65,6 +71,8 @@ body {
     background-color: black;
 }
 
+
+
 .board-container {
     display: flex;
     justify-content: center;
@@ -85,18 +93,24 @@ body {
 }
 
 .how-to-play-container {
-    position: relative;
-    border-radius: 8px;
-    border: 1px solid #1a1a1b;
-    background-color: #121213;
-    color: #f8f8f8;
-    box-shadow: 0 4px 23px 0 rgba(0, 0, 0, .2);
-    width: 90%;
-    max-height: 100%;
-    overflow-y: auto;
-    animation: Modal-module_SlideIn__BF5gw 200ms;
+    position: absolute; /* Position relative to game-container */
+    top: 20px;
+    left:50%;
+    transform: translateX(-50%);
     max-width: 520px;
+    max-height: 620px;
+    height: 100%;
+    width: 90%;
+    overflow-y: auto;
     box-sizing: border-box;
+    background-color: red;
+    border: 1px solid #1a1a1b;
+    border-radius: 8px;
+    padding: 32px;
+    box-shadow: 0 4px 23px 0 rgba(0, 0, 0, .2);
+    animation: Modal-module_SlideIn__BF5gw 200ms;
+    color: #f8f8f8;
+    display: none;
 }
 
 .invalid-entry-container {
@@ -237,7 +251,7 @@ body {
 
 @media (min-width: 375px) {
     .logout-button {
-        width: 9.1875rem;
+        width: 8rem;
     }
 }
 
@@ -262,6 +276,12 @@ body {
         padding: 4px;
     }
     
+}
+
+@media (max-width: 512px) {
+    .how-to-play-container {
+       width: 95%;
+    }
 }
 
 @keyframes row-shake {
@@ -343,3 +363,4 @@ body {
         opacity: 0;
     }
 }
+
