--- a/styles/game.css
+++ b/styles/game.css
@@ -16,6 +16,11 @@ body {
 }
 
 @font-face {
+    font-family: "nyt-franklin-300";
+    src: url("../fonts/franklin-normal-300.ttf") format("truetype");
+}
+
+@font-face {
     font-family: "nyt-franklin-600";
     src: url("../fonts/franklin-normal-600.ttf") format("truetype");
 }
@@ -146,6 +151,11 @@ strong {
     cursor: pointer;
     animation: Modal-module_AntiSlideIn__KUwJS 200ms;
 }
+
+.tooltip-close-button {
+    top: 5px;
+    right: 5px;
+}   
 
 .close-button svg {
     width: 100%;
@@ -358,6 +368,53 @@ li::marker {
 .enter-clear {
     flex: 1.5;
     font-size: 0.75rem;
+}
+
+.tooltip {
+    position: absolute;
+    background-color: #121213e2;
+    max-width: 17rem;
+    max-height: 6.8rem;
+    padding: 0.5rem;
+    padding-left: 0.8rem;
+    border-radius: 0.6rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    top: 10px;
+    right: 300px;
+}
+
+.tooltip::before {
+    content: "";
+    position: absolute;
+    bottom: 100%; /* Position above the tooltip */
+    left: 96px; /* Adjust as needed */
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent #121213e2 transparent; /* Triangle */
+}
+
+.tooltip-feature-text {
+    font-family: "nyt-franklin-600";
+    color: rgba(0, 0, 255, 0.656);
+    font-size: 12px;
+    padding-bottom: 3px;
+    line-height: 1.5;
+}
+
+.tooltip-header {
+    font-family: "nyt-franklin-600";
+    color: #f8f8f8;
+    font-size: 17px;
+    line-height: 1.5;
+    
+}
+
+.tooltip-para {
+    font-family: "nyt-franklin-300";
+    color: #f8f8f8;
+    line-height: 1.5;
+    font-size: 15px;
+    padding-bottom: 3px;
 }
 
 @media (min-width: 768px) {
